[gd_scene load_steps=7 format=3 uid="uid://c3dxl8g614j3w"]

[ext_resource type="Script" path="res://game/UI/menus/start_menu/main_menu.gd" id="1_l3x28"]
[ext_resource type="Texture2D" uid="uid://bo6owjw1w2i26" path="res://Assets/Cover_art/Oin1Ud.png" id="2_5jsu6"]
[ext_resource type="Texture2D" uid="uid://clplo8oe5l5lx" path="res://Assets/UI_elements/startbutton.png" id="3_3j6o5"]
[ext_resource type="Texture2D" uid="uid://sa8bhqof2q55" path="res://Assets/UI_elements/buttons.png" id="4_25fhi"]
[ext_resource type="FontFile" uid="uid://b12uhspi0hqu0" path="res://Assets/Fonts/Splatfont2.ttf" id="5_xu1am"]
[ext_resource type="AudioStream" uid="uid://cl6vs6n0oka6h" path="res://Assets/Audio/music/strangecompanionjam_backgroundloop.mp3" id="6_1gd82"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l3x28")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = -1.0
offset_top = -1.0
offset_right = 669.0
offset_bottom = 416.0
scale = Vector2(1.72, 1.56)
texture = ExtResource("2_5jsu6")

[node name="Buttons" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(171, 400)
scale = Vector2(0.145852, 0.145852)
texture = ExtResource("3_3j6o5")
vframes = 2
frame = 1

[node name="Play" type="Button" parent="CanvasLayer/Buttons"]
modulate = Color(1, 1, 1, 0)
z_index = 10
offset_left = -1049.0
offset_top = -411.0
offset_right = 1028.0
offset_bottom = 521.0

[node name="Buttons2" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(0.43, 0.715, 1, 1)
position = Vector2(169, 556)
scale = Vector2(0.106, 0.106)
texture = ExtResource("4_25fhi")
vframes = 2
frame = 1

[node name="Quit" type="Button" parent="CanvasLayer/Buttons2"]
modulate = Color(1, 1, 1, 0)
z_index = 10
offset_left = -1028.44
offset_top = -534.789
offset_right = 1048.56
offset_bottom = 397.211

[node name="Label" type="Label" parent="CanvasLayer/Buttons2"]
offset_left = -613.208
offset_top = -754.717
offset_right = 785.792
offset_bottom = 645.283
theme_override_fonts/font = ExtResource("5_xu1am")
theme_override_font_sizes/font_size = 650
text = "QUIT"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(169, 556)
scale = Vector2(0.106, 0.106)
stream = ExtResource("6_1gd82")
autoplay = true

[connection signal="button_down" from="CanvasLayer/Buttons/Play" to="." method="_on_play_button_down"]
[connection signal="button_up" from="CanvasLayer/Buttons/Play" to="." method="_on_play_button_up"]
[connection signal="pressed" from="CanvasLayer/Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="button_down" from="CanvasLayer/Buttons2/Quit" to="." method="_on_quit_button_down"]
[connection signal="button_up" from="CanvasLayer/Buttons2/Quit" to="." method="_on_quit_button_up"]
[connection signal="pressed" from="CanvasLayer/Buttons2/Quit" to="." method="_on_quit_pressed"]
